--- a/style.css
+++ b/style.css
@@ -9,9 +9,11 @@
 
   font-size: 32px;
 
-  color: rgb(255, 255, 255);
+  color: #77aaff;
   text-decoration: none;
   font-family: "Montserrat", sans-serif;
+
+  -webkit-transition: 0.2s ease;
 }
 
 .wrapper {
@@ -32,7 +34,8 @@
 }
 
 .nav {
-  border-bottom: 4px #77aaff solid;
+  /* border-bottom: 4px #77aaff solid; */
+  /* background-color: #eef4ff; */
 }
 
 .nav__list {
@@ -60,7 +63,52 @@
 }
 
 .nav__list-el:hover {
-  transition: 0.15s;
   background-color: #77aaff;
   color: #fff;
+  font-size: 26px;
+}
+
+.header__title {
+  text-align: center;
+  font-size: 46px;
+  margin-top: 60px;
+}
+
+.main__child-list-title {
+  text-align: center;
+  margin-top: 30px;
+  font-style: 50px;
+  font-weight: 500;
+}
+
+.section__child-card-photo {
+  width: 325px;
+  border-radius: 40px;
+  border: 8px #77aaff solid;
+}
+
+.section__child-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 50px;
+
+  border: #77aaff 4px solid;
+  border-radius: 50px;
+  padding: 10px;
+}
+
+.section__child-name {
+  font-size: 60px;
+  font-weight: 600;
+  margin: 0 auto;
+}
+
+.wrapper-2 {
+  width: 800px;
+  margin: 0 auto;
+}
+
+.section {
+  margin-top: 100px;
 }
