--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
 .nav__list-el:hover {
   background-color: #77aaff;
   color: #fff;
-  font-size: 26px;
+  transform: scale(1.1);
 }
 
 .header__title {
@@ -87,7 +87,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 80px;
+  margin-top: 190px;
 
   border: #77aaff 6px solid;
   border-radius: 50px;
@@ -127,8 +127,8 @@
 
 .section-right__title {
   text-align: center;
-  margin-top: 60px;
-  margin-bottom: 30px;
+  margin-top: 80px;
+  margin-bottom: 50px;
   font-weight: 600;
 }
 
@@ -141,11 +141,10 @@
   width: 30%;
   border-radius: 40px;
   margin: 20px;
-  flex-grow: 1;
-  flex-basis: 0;
+  box-shadow: 16px 16px 0px 0px rgba(132, 169, 233, 0.3);
 }
 
 .section-right__web-photo:hover {
-  /* box-shadow: 16px 16px 0px 0px rgba(132, 169, 233, 1); */
-  transform: scale(1.3);
+  transform: scale(1.25);
+  box-shadow: none;
 }
