--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
   background-color: #fff;
 
-  font-size: 32px;
+  font-size: 24px;
 
   color: #77aaff;
   text-decoration: none;
@@ -17,7 +17,7 @@
 }
 
 .wrapper {
-  max-width: 1700px;
+  max-width: 1600px;
   margin: 0 auto;
 }
 
@@ -37,18 +37,20 @@
   justify-content: space-around;
   align-items: center;
   list-style: none;
+  font-size: 18 px;
 }
 
 .nav__list li {
   display: flex;
+  font-size: 18 px;
 }
 
 .nav__list-el {
   margin: 0;
-  font-size: 24px;
+  font-size: 18 px;
   font-weight: 500;
 
-  padding: 10px;
+  padding: 18px;
   margin: 5px;
 
   color: #77aaff;
@@ -116,6 +118,7 @@
   justify-content: space-between;
 
   margin: 0 auto;
+  /* margin-bottom: 150px; */
 }
 
 .section-right {
@@ -129,6 +132,7 @@
   margin-top: 80px;
   margin-bottom: 50px;
   font-weight: 600;
+  font-size: 34px;
 }
 
 .section-right__line-1 {
@@ -144,6 +148,42 @@
 }
 
 .section-right__web-photo:hover {
+  transform: scale(1.25);
+  box-shadow: none;
+}
+
+.yt-video{
+  margin: 0 auto;
+  text-align: center;
+  width: 1000px;
+
+}
+
+.wrapper-4{
+  max-width: 1500px;
+  margin: auto;
+
+}
+
+.warpper-4__title{
+  font-size: 38px;
+  text-align: center;
+  margin-top: 150px;
+}
+
+.wrapper-4__video-section{
+  display: flex;
+  justify-content: space-around;
+}
+
+.video-section__photo{
+  margin-top: 80px;
+  width: 400px;
+  border-radius: 40px;
+  box-shadow: 20px 20px 0px 0px rgba(132, 169, 233, 0.3);
+}
+
+.video-section__photo:hover{
   transform: scale(1.25);
   box-shadow: none;
 }
