--- a/style.css
+++ b/style.css
@@ -66,8 +66,8 @@
 
 .header__title {
   text-align: center;
-  font-size: 46px;
-  margin-top: 60px;
+  font-size: 52px;
+  margin-top: 120px;
 }
 
 .main__title {
@@ -113,10 +113,9 @@
 }
 
 .section-conteiner {
-  width: 1660px;
+  width: 1610px;
   display: flex;
   justify-content: space-between;
-
   margin: 0 auto;
   /* margin-bottom: 150px; */
 }
@@ -186,4 +185,9 @@
 .video-section__photo:hover{
   transform: scale(1.25);
   box-shadow: none;
+}
+
+.video-conteiner{
+  margin-top: 60px;
+  text-align: center;
 }
