--- a/other-web-pages/Taras/style.css
+++ b/other-web-pages/Taras/style.css
@@ -54,3 +54,11 @@ a:hover {
 hr {
   color: purple;
 }
+
+
+.moodbord{
+  width: 1000px;
+  margin: auto;
+  text-align: center;
+  border: none;
+}
